# maltese-ocr

./: .gitignore  AGENTS.md  CLAUDE.md  Makefile  README.md  competition_transcriber.py  documentation.md  generate_data.py  maltese_ocr_implementation_plan.md  pyproject.toml  requirements.txt  results.json  run_colab.ipynb  session_log_2026-06-15.md  test_baseline.py  train.py  train_colab.py  transcribe.py
configs/: charset.txt  stage1.yaml  stage1_smoke.yaml  stage2.yaml  stage3.yaml
data/: texts.json
data/synthetic/: transcriptions.json
data/synthetic_v2/: transcriptions.json
fonts/: README.md  fonts_ok.json
scripts/: audit_fonts.py  build_dataset.py  diagnose_cer_by_length.py  fetch_fonts.py  package_model.py  render_sample.py  sync_vault.py  train_t6.sbatch
src/maltese_ocr/: __init__.py
src/maltese_ocr.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/maltese_ocr/data/: __init__.py  corpus.py
src/maltese_ocr/infer/: __init__.py
src/maltese_ocr/pretrain/: __init__.py  run.py  seqclr.py
src/maltese_ocr/render/: __init__.py  fonts.py  renderer.py
src/maltese_ocr/train/: __init__.py  char_tokenizer.py  decoder_swap.py  run.py
tests/: test_decoder_swap.py  test_finetune.py  test_renderer.py  test_seqclr.py  test_smoke.py
